--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                                <li><a class="dropdown-item" href="article.html">Article Details</a></li>
+                                <li><a class="dropdown-item" href="#">Article Details</a></li>
                                 <li><div class="dropdown-divider"></div></li>
-                                <li><a class="dropdown-item" href="terms.html">Terms Conditions</a></li>
+                                <li><a class="dropdown-item" href="#">Terms Conditions</a></li>
                                 <li><div class="dropdown-divider"></div></li>
-                                <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
+                                <li><a class="dropdown-item" href="#">Privacy Policy</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading"> BinGuardian hadir dengan <span>berbagai layanan</span></h2>
+                        <h2 class="h2-heading"> BinGuardian hadir dengan <span>berbagai layanan.</span></h2>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -573,11 +573,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p class="p-small">Copyright © <a href="#your-link">Your name</a></p>
-                    </div> <!-- end of col -->
-
-                    <div class="col-lg-6">
-                        <p class="p-small">Distributed By<a href="https://themewagon.com/"> Themewagon</a></p>    
+                        <p class="p-small">Copyright © <a href="index.html">BinGuardian.</a></p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
@@ -594,7 +590,7 @@
         <!-- Scripts -->
         <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
         <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-        <script src="js/purecounter.min.js"></script> <!-- Purecounter counter for statistics numbers -->
+        <!-- <script src="js/purecounter.min.js"></script> Purecounter counter for statistics numbers -->
         <script src="js/replaceme.min.js"></script> <!-- ReplaceMe for rotating text -->
         <script src="js/scripts.js"></script> <!-- Custom scripts -->
     </body>
