--- a/sign-up.html
+++ b/sign-up.html
@@ -123,10 +123,6 @@
                                     <input type="text" class="form-control" id="floatingInput4" placeholder="Alamat">
                                     <label for="floatingInput">Alamat</label>
                                 </div>
-                                <div class="mb-4 form-check">
-                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                    <label class="form-check-label" for="exampleCheck1"> Saya setuju dengan <a href="privacy.html">Kebijakan Privasi</a> dan <a href="terms.html">Syarat & Ketentuan</a>yang tercantum dalam situs ini.</label>
-                                </div>
                                 <button type="submit" class="form-control-submit-button">Sign up</button>
                             </form>
                             <!-- end of sign up form -->
@@ -195,7 +191,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p class="p-small">Copyright © <a href="#your-link">Your name</a></p>
+                        <p class="p-small">Copyright © <a href="index.html">BinGuardian</a></p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
